fix: remove obsolete MaxPermSize JVM option for Java 21+